# pg-materialize

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
pg_materialize/: pg_materialize.py
tests/: test_pg_materialize.py
tests/fixtures/: invalid.sql  members.sql
