[metadata]
name = pg-materialize
summary = Postgres Materialized View Dependency Manager
description-file = README.rst
version = 0.2.9
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Utilities
keywords =
    pg
    postgres
    psql
    pgsql
    postgresql
    materialized
    view
    dependency
    dependencies
author = Ali Anari
author-email = ali@anari.io
home-page = https://github.com/aanari/pg-materialize

[files]
packages =
    pg_materialize

[wheel]
universal = 1

[entry_points]
console_scripts =
    pg_materialize = pg_materialize.pg_materialize:cli
